# Hackathon-2-Phase-3-Todo-Ai-Chatbot

./: .gitignore  CLAUDE.md  README.md  README1.md  README2.md  README3.md  README4.md  README5.md  package-lock.json  vercel.json
backend/: .gitignore  .prettierignore  .prettierrc  README.md  check_imports.py  check_routes.py  db.py  debug_auth.py  debug_chat.py  debug_forgot_password.py  debug_import.py  fastapi_server.py  final_test.py  final_verification.py  init_db.py  main.py  main_minimal.py  main_simple.py  mock_users.json  pyproject.toml  requirements-windows.txt  requirements.txt  simple_validate.py  start_server.py  test_api.py  test_api_direct.py  test_auth_endpoints.py  test_backend.py  test_chat.py  test_db.py  test_forgot_password.py  test_import.py  test_isolated.py  test_neon_connection.py  test_new_endpoint.py  test_task_creation.py  test_task_creation_detailed.py  trace_error.py  validate_implementation.py  verification_summary.md
backend/api/: client.py
backend/auth/: jwt_handler.py
backend/config/: settings.py
backend/dependencies/: auth.py
backend/docs/: api.md
backend/middleware/: logging.py
backend/models/: task.py
backend/routes/: auth.py  tasks.py
backend/schemas/: task.py
backend/services/: email_service.py  task_service.py
backend/src/: __init__.py
backend/src/api/: __init__.py  chat_router.py
backend/src/mcp_server/: __init__.py  server.py
backend/src/models/: __init__.py  conversation.py  message.py
backend/src/services/: __init__.py  chat_service.py  (+2 more)
backend/tests/: conftest.py
backend/utils/: errors.py
(+115 files in other folders)
